force-app/main/default/objects/PriceBookEntry__c/PriceBookEntry__c.object-meta.xml
<CustomObject>
    <label>PriceBookEntry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceBookEntries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>