force-app/main/default/objects/PriceBookEntry__c/fields/Advance_Payment_Discount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Discount__c</fullName>
    <label>Advance Payment Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>