force-app/main/default/objects/PriceBookEntry__c/fields/End_Qty__c.field-meta.xml
<CustomField>
    <fullName>End_Qty__c</fullName>
    <label>End Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>