force-app/main/default/objects/PriceBookEntry__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <label>PriceBook</label>
    <referenceTo>PriceBook__c</referenceTo>
    <relationshipLabel>PriceBookEntries</relationshipLabel>
    <relationshipName>PriceBookEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>