force-app/main/default/objects/PriceBookEntry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>PriceBookEntries</relationshipLabel>
    <relationshipName>PriceBookEntries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>