force-app/main/default/objects/PriceBookEntry__c/fields/Start_Qty__c.field-meta.xml
<CustomField>
    <fullName>Start_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Start Qty</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>