force-app/main/default/objects/PriceBookEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <columns>Dealer_Price__c</columns>
    <columns>Advance_Payment_Discount__c</columns>
    <columns>PriceBook__c</columns>
    <columns>Start_Qty__c</columns>
    <columns>End_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>